# GridDataFormats

./: .appveyor.yml  .buildinfo  .coveragerc  .gitattributes  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS  CHANGELOG  CODE_OF_CONDUCT.md  INSTALL  MAINTAINER.md  MANIFEST.in  README  README.rst  SUMMARY.txt  environment.yaml  genindex.html  index.html  installation.html  meta.yaml  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  sitemap.xml
.doctrees/: index.doctree  installation.doctree
.doctrees/gridData/: basic.doctree  core.doctree  formats.doctree  interoperability.doctree  overview.doctree
.doctrees/gridData/formats/: OpenDX.doctree  OpenVDB.doctree  gOpenMol.doctree  mrc.doctree
.github/actions/wait-for-pypi-version/: action.yaml
.github/workflows/: deploy.yaml  docs.yaml  gh-ci.yaml
_modules/: index.html
_modules/gridData/: CCP4.html  OpenDX.html  OpenVDB.html  core.html  gOpenMol.html  mrc.html
_sources/: index.rst.txt  index.txt
_sources/gridData/: basic.rst.txt  core.rst.txt  formats.rst.txt
_sources/gridData/formats/: CCP4.rst.txt  OpenDX.rst.txt  gOpenMol.rst.txt
_static/: documentation_options.js  opensearch.xml
ci/: deploy_docs.sh  environment.yaml  requirements.txt
doc/: Makefile
doc/doctrees/: environment.pickle  index.doctree
doc/doctrees/gridData/: core.doctree  formats.doctree  overview.doctree
doc/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
doc/html/_modules/: index.html
doc/html/_sources/: index.txt
doc/html/gridData/: core.html  formats.html  overview.html
doc/source/: conf.py  index.rst  installation.rst
doc/source/_templates/: layout.html
doc/source/gridData/: core.rst  formats.rst  interoperability.rst  overview.rst
examples/extractISOPdb/: extractISOPdb.py  extractISOPdb_gdf.py  how  mdpout_freq_grid.dx
gridData/: CCP4.py  OpenDX.py  OpenVDB.py  __init__.py  _version.py  basic.html  core.html  core.py  formats.html  gOpenMol.py  interoperability.html  mrc.py  overview.html
gridData/formats/: CCP4.html  OpenDX.html  OpenVDB.html  gOpenMol.html  mrc.html
gridData/testing/: tempdir.py
gridData/tests/: __init__.py  test.dx  test_ccp4.py  test_dx.py  test_gOpenMol.py  test_grid.py  test_mrc.py  test_vdb.py
gridData/tests/datafiles/: __init__.py
gridDataFormats/: OpenDX.py  __init__.py  core.py  gOpenMol.py
(+15 files in other folders)
